ql/parse/parser.out
Created by PLY version 3.9 (http://www.dabeaz.com/ply)

Unused terminals:

    IN
    DROP

Grammar

Rule 0     S' -> EXECUTE_STATEMENT
Rule 1     EXECUTE_STATEMENT -> STATEMENT END_QUERY
Rule 2     STATEMENT -> EXPLAIN STATEMENT
Rule 3     STATEMENT -> TOK_CREATE_TABLE
Rule 4     STATEMENT -> TOK_INSERT_INTO
Rule 5     STATEMENT -> TOK_QUERY
Rule 6     STATEMENT -> TOK_BULK_INTO
Rule 7     STATEMENT -> TOK_UPDATE
Rule 8     STATEMENT -> TOK_UPSERT_INTO
Rule 9     STATEMENT -> TOK_DELETE
Rule 10    TOK_OPTIONS_OBJECT -> ( KV_ELEMENTS_EXPR )
Rule 11    TOK_DICT_OBJECT -> { KV_ELEMENTS_EXPR }
Rule 12    TOK_LIST_OBJECT -> [ VALUES_EXPR ]
Rule 13    TOK_LIST_OBJECT -> [ ]
Rule 14    TOK_TUPLE_OBJECT -> ( VALUES_EXPR )
Rule 15    TOK_TUPLE_OBJECT -> ( )
Rule 16    KV_ELEMENTS_EXPR -> TOK_KEY_VALUE
Rule 17    KV_ELEMENTS_EXPR -> TOK_KEY_VALUE COMMA TOK_KEY_VALUE
Rule 18    KV_ELEMENTS_EXPR -> TOK_KEY_VALUE COMMA KV_ELEMENTS_EXPR
Rule 19    VALUES_EXPR -> VALUE_EXPR
Rule 20    VALUES_EXPR -> VALUE_EXPR COMMA VALUE_EXPR
Rule 21    VALUES_EXPR -> VALUE_EXPR COMMA VALUES_EXPR
Rule 22    TOK_KEY_VALUE -> TOK_EXPRESSION
Rule 23    LEFT_RESERVED_VALUES_EXPR -> FROM
Rule 24    LEFT_RESERVED_VALUES_EXPR -> TO
Rule 25    LEFT_VALUE_EXPR -> VALUE_EXPR
Rule 26    LEFT_VALUE_EXPR -> TOK_FUNCTION_EXPR
Rule 27    LEFT_VALUE_EXPR -> LEFT_RESERVED_VALUES_EXPR
Rule 28    LEFT_VALUES_EXPR -> LEFT_VALUE_EXPR
Rule 29    LEFT_VALUES_EXPR -> LEFT_VALUE_EXPR COMMA LEFT_VALUE_EXPR
Rule 30    LEFT_VALUES_EXPR -> LEFT_VALUE_EXPR COMMA LEFT_VALUES_EXPR
Rule 31    RIGHT_VALUE_EXPR -> VALUE_EXPR
Rule 32    RIGHT_VALUES_EXPR -> VALUE_EXPR
Rule 33    RIGHT_VALUES_EXPR -> RIGHT_VALUE_EXPR COMMA RIGHT_VALUE_EXPR
Rule 34    RIGHT_VALUES_EXPR -> RIGHT_VALUE_EXPR COMMA RIGHT_VALUES_EXPR
Rule 35    VALUE_EXPR -> TOK_DOT
Rule 36    VALUE_EXPR -> TOK_VALUE
Rule 37    VALUE_EXPR -> TOK_DICT_OBJECT
Rule 38    VALUE_EXPR -> TOK_LIST_OBJECT
Rule 39    TOK_DOT -> TOK_VALUE . TOK_VALUE
Rule 40    TOK_DOT -> TOK_VALUE . TOK_DOT
Rule 41    TOK_VALUE -> WORD
Rule 42    TOK_VALUE -> QUOTE_STRING
Rule 43    TOK_VALUE -> NUMBER
Rule 44    TOK_VALUE -> DQUOTE_STRING
Rule 45    TOK_VALUE -> *
Rule 46    EXPRESSION_EXPR -> NOT EXPRESSION_EXPR
Rule 47    EXPRESSION_EXPR -> ( EXPRESSION_EXPR )
Rule 48    EXPRESSION_EXPR -> EXPRESSION_EXPR OR EXPRESSION_EXPR
Rule 49    EXPRESSION_EXPR -> EXPRESSION_EXPR AND EXPRESSION_EXPR
Rule 50    EXPRESSION_EXPR -> TOK_EXPRESSION
Rule 51    EXPRESSION_EXPR -> TOK_FUNCTION_EXPR
Rule 52    TOK_EXPRESSION_LEFT -> LEFT_VALUES_EXPR
Rule 53    TOK_EXPRESSION_RIGHT -> RIGHT_VALUE_EXPR
Rule 54    TOK_EXPRESSION -> TOK_EXPRESSION_LEFT COMPARE_TYPE_EXPR TOK_EXPRESSION_RIGHT
Rule 55    COMPARE_TYPE_EXPR -> COMPARE_TYPE
Rule 56    COMPARE_TYPE_EXPR -> LIKE
Rule 57    TOK_FUNCTION_EXPR -> TOK_BEWTEEN
Rule 58    TOK_FUNCTION_EXPR -> TOK_FUNCTION
Rule 59    TOK_FUNCTION_EXPR -> TOK_ISNULL
Rule 60    TOK_FUNCTION -> VALUE_EXPR TOK_TUPLE_OBJECT
Rule 61    TOK_BEWTEEN -> VALUE_EXPR BETWEEN RIGHT_VALUE_EXPR AND RIGHT_VALUE_EXPR
Rule 62    TOK_ISNULL -> VALUE_EXPR IS NULL
Rule 63    TOK_ISNULL -> VALUE_EXPR IS NOT NULL
Rule 64    TOK_CREATE_TABLE -> TOK_CREATE_TABLE WITH OPTION TOK_TABLE_OPTIONS
Rule 65    TOK_CREATE_TABLE -> TOK_CREATE_TABLE WITH META TOK_TABLE_METAS
Rule 66    TOK_CREATE_TABLE -> CREATE TABLE TOK_TABLE_NAME TOK_TABLE_COLS
Rule 67    TOK_META_OPTIONS -> TOK_OPTIONS_OBJECT
Rule 68    TOK_META_DEF -> WORD TOK_META_OPTIONS
Rule 69    TOK_METAS_DEF -> TOK_META_DEF
Rule 70    TOK_METAS_DEF -> TOK_META_DEF COMMA TOK_META_DEF
Rule 71    TOK_METAS_DEF -> TOK_META_DEF COMMA TOK_METAS_DEF
Rule 72    TOK_TABLE_METAS -> ( )
Rule 73    TOK_TABLE_METAS -> ( TOK_METAS_DEF )
Rule 74    TOK_TABLE_OPTIONS -> TOK_OPTIONS_OBJECT
Rule 75    TOK_TABLE_NAME -> VALUE_EXPR
Rule 76    TOK_TABLE_COLS -> ( )
Rule 77    TOK_TABLE_COLS -> ( TOK_COLUMNS_DEFINE )
Rule 78    TOK_COLUMNS_DEFINE -> TOK_COLUMN_DEFINE
Rule 79    TOK_COLUMNS_DEFINE -> TOK_COLUMN_DEFINE COMMA TOK_COLUMN_DEFINE
Rule 80    TOK_COLUMNS_DEFINE -> TOK_COLUMN_DEFINE COMMA TOK_COLUMNS_DEFINE
Rule 81    COLUMN_TYPE -> WORD
Rule 82    TOK_COLUMN_DEFINE -> TOK_COLUMN_DEFINE AS TOK_TABLE_COLS
Rule 83    TOK_COLUMN_OPTIONS -> TOK_OPTIONS_OBJECT
Rule 84    TOK_COLUMN_DEFINE -> WORD COLUMN_TYPE
Rule 85    TOK_COLUMN_DEFINE -> WORD COLUMN_TYPE TOK_COLUMN_OPTIONS
Rule 86    TOK_QUERY -> TOK_QUERY ORDER BY TOK_ORDERBY
Rule 87    TOK_QUERY -> TOK_QUERY WHERE TOK_WHERE
Rule 88    TOK_QUERY -> TOK_QUERY LIMIT TOK_LIMIT
Rule 89    TOK_QUERY -> SELECT TOK_SELECT FROM TOK_FROM
Rule 90    TOK_FROM -> TOK_TABLE_NAME
Rule 91    TOK_WHERE -> EXPRESSION_EXPR
Rule 92    TOK_SELECT -> TOK_SELEXPRS
Rule 93    TOK_SELEXPR -> LEFT_VALUE_EXPR
Rule 94    TOK_SELEXPR -> LEFT_VALUE_EXPR AS VALUE_EXPR
Rule 95    TOK_SELEXPRS -> TOK_SELEXPR
Rule 96    TOK_SELEXPRS -> TOK_SELEXPR COMMA TOK_SELEXPR
Rule 97    TOK_SELEXPRS -> TOK_SELEXPR COMMA TOK_SELEXPRS
Rule 98    TOK_LIMIT -> LIMITS_EXPR
Rule 99    LIMIT_EXPR -> NUMBER
Rule 100   LIMITS_EXPR -> LIMIT_EXPR
Rule 101   LIMITS_EXPR -> LIMIT_EXPR COMMA LIMIT_EXPR
Rule 102   TOK_ORDERBY -> TOK_SORTS
Rule 103   TOK_SORTS -> TOK_SORT
Rule 104   TOK_SORTS -> TOK_SORT COMMA TOK_SORT
Rule 105   TOK_SORTS -> TOK_SORT COMMA TOK_SORTS
Rule 106   SORT_MODE -> ASC
Rule 107   SORT_MODE -> DESC
Rule 108   TOK_SORT -> LEFT_VALUE_EXPR
Rule 109   TOK_SORT -> LEFT_VALUE_EXPR SORT_MODE
Rule 110   TOK_QUERY -> TOK_QUERY GROUP BY TOK_GROUPBY
Rule 111   TOK_GROUPBY -> LEFT_VALUES_EXPR
Rule 112   TOK_INSERT_INTO -> INSERT INTO TOK_TABLE_NAME TOK_INSERT_COLUMNS VALUES TOK_VALUE_ROW
Rule 113   TOK_INSERT_COLUMNS -> TOK_TUPLE_OBJECT
Rule 114   TOK_VALUE_ROW -> ( RIGHT_VALUES_EXPR )
Rule 115   TOK_BULK_ROWS -> [ INSERT_ROWS_EXPR ]
Rule 116   INSERT_ROWS_EXPR -> TOK_VALUE_ROW
Rule 117   INSERT_ROWS_EXPR -> TOK_VALUE_ROW COMMA TOK_VALUE_ROW
Rule 118   INSERT_ROWS_EXPR -> TOK_VALUE_ROW COMMA INSERT_ROWS_EXPR
Rule 119   TOK_BULK_INTO -> BULK INTO TOK_TABLE_NAME TOK_INSERT_COLUMNS VALUES TOK_BULK_ROWS
Rule 120   TOK_UPDATE -> UPDATE TOK_TABLE_NAME SET TOK_SET_COLUMNS_CLAUSE WHERE TOK_WHERE
Rule 121   TOK_SET_COLUMNS_CLAUSE -> KV_ELEMENTS_EXPR
Rule 122   TOK_UPSERT_INTO -> UPSERT INTO TOK_TABLE_NAME TOK_INSERT_COLUMNS VALUES TOK_VALUE_ROW
Rule 123   TOK_DELETE -> DELETE FROM TOK_TABLE_NAME WHERE TOK_WHERE

Terminals, with rules where they appear

(                    : 10 14 15 47 72 73 76 77 114
)                    : 10 14 15 47 72 73 76 77 114
*                    : 45
.                    : 39 40
AND                  : 49 61
AS                   : 82 94
ASC                  : 106
BETWEEN              : 61
BULK                 : 119
BY                   : 86 110
COMMA                : 17 18 20 21 29 30 33 34 70 71 79 80 96 97 101 104 105 117 118
COMPARE_TYPE         : 55
CREATE               : 66
DELETE               : 123
DESC                 : 107
DQUOTE_STRING        : 44
DROP                 : 
END_QUERY            : 1
EXPLAIN              : 2
FROM                 : 23 89 123
GROUP                : 110
IN                   : 
INSERT               : 112
INTO                 : 112 119 122
IS                   : 62 63
LIKE                 : 56
LIMIT                : 88
META                 : 65
NOT                  : 46 63
NULL                 : 62 63
NUMBER               : 43 99
OPTION               : 64
OR                   : 48
ORDER                : 86
QUOTE_STRING         : 42
SELECT               : 89
SET                  : 120
TABLE                : 66
TO                   : 24
UPDATE               : 120
UPSERT               : 122
VALUES               : 112 119 122
WHERE                : 87 120 123
WITH                 : 64 65
WORD                 : 41 68 81 84 85
[                    : 12 13 115
]                    : 12 13 115
error                : 
{                    : 11
}                    : 11

Nonterminals, with rules where they appear

COLUMN_TYPE          : 84 85
COMPARE_TYPE_EXPR    : 54
EXECUTE_STATEMENT    : 0
EXPRESSION_EXPR      : 46 47 48 48 49 49 91
INSERT_ROWS_EXPR     : 115 118
KV_ELEMENTS_EXPR     : 10 11 18 121
LEFT_RESERVED_VALUES_EXPR : 27
LEFT_VALUES_EXPR     : 30 52 111
LEFT_VALUE_EXPR      : 28 29 29 30 93 94 108 109
LIMITS_EXPR          : 98
LIMIT_EXPR           : 100 101 101
RIGHT_VALUES_EXPR    : 34 114
RIGHT_VALUE_EXPR     : 33 33 34 53 61 61
SORT_MODE            : 109
STATEMENT            : 1 2
TOK_BEWTEEN          : 57
TOK_BULK_INTO        : 6
TOK_BULK_ROWS        : 119
TOK_COLUMNS_DEFINE   : 77 80
TOK_COLUMN_DEFINE    : 78 79 79 80 82
TOK_COLUMN_OPTIONS   : 85
TOK_CREATE_TABLE     : 3 64 65
TOK_DELETE           : 9
TOK_DICT_OBJECT      : 37
TOK_DOT              : 35 40
TOK_EXPRESSION       : 22 50
TOK_EXPRESSION_LEFT  : 54
TOK_EXPRESSION_RIGHT : 54
TOK_FROM             : 89
TOK_FUNCTION         : 58
TOK_FUNCTION_EXPR    : 26 51
TOK_GROUPBY          : 110
TOK_INSERT_COLUMNS   : 112 119 122
TOK_INSERT_INTO      : 4
TOK_ISNULL           : 59
TOK_KEY_VALUE        : 16 17 17 18
TOK_LIMIT            : 88
TOK_LIST_OBJECT      : 38
TOK_METAS_DEF        : 71 73
TOK_META_DEF         : 69 70 70 71
TOK_META_OPTIONS     : 68
TOK_OPTIONS_OBJECT   : 67 74 83
TOK_ORDERBY          : 86
TOK_QUERY            : 5 86 87 88 110
TOK_SELECT           : 89
TOK_SELEXPR          : 95 96 96 97
TOK_SELEXPRS         : 92 97
TOK_SET_COLUMNS_CLAUSE : 120
TOK_SORT             : 103 104 104 105
TOK_SORTS            : 102 105
TOK_TABLE_COLS       : 66 82
TOK_TABLE_METAS      : 65
TOK_TABLE_NAME       : 66 90 112 119 120 122 123
TOK_TABLE_OPTIONS    : 64
TOK_TUPLE_OBJECT     : 60 113
TOK_UPDATE           : 7
TOK_UPSERT_INTO      : 8
TOK_VALUE            : 36 39 39 40
TOK_VALUE_ROW        : 112 116 117 117 118 122
TOK_WHERE            : 87 120 123
VALUES_EXPR          : 12 14 21
VALUE_EXPR           : 19 20 20 21 25 31 32 60 61 62 63 75 94

Parsing method: LALR

state 0

    (0) S' -> . EXECUTE_STATEMENT
    (1) EXECUTE_STATEMENT -> . STATEMENT END_QUERY
    (2) STATEMENT -> . EXPLAIN STATEMENT
    (3) STATEMENT -> . TOK_CREATE_TABLE
    (4) STATEMENT -> . TOK_INSERT_INTO
    (5) STATEMENT -> . TOK_QUERY
    (6) STATEMENT -> . TOK_BULK_INTO
    (7) STATEMENT -> . TOK_UPDATE
    (8) STATEMENT -> . TOK_UPSERT_INTO
    (9) STATEMENT -> . TOK_DELETE
    (64) TOK_CREATE_TABLE -> . TOK_CREATE_TABLE WITH OPTION TOK_TABLE_OPTIONS
    (65) TOK_CREATE_TABLE -> . TOK_CREATE_TABLE WITH META TOK_TABLE_METAS
    (66) TOK_CREATE_TABLE -> . CREATE TABLE TOK_TABLE_NAME TOK_TABLE_COLS
    (112) TOK_INSERT_INTO -> . INSERT INTO TOK_TABLE_NAME TOK_INSERT_COLUMNS VALUES TOK_VALUE_ROW
    (86) TOK_QUERY -> . TOK_QUERY ORDER BY TOK_ORDERBY
    (87) TOK_QUERY -> . TOK_QUERY WHERE TOK_WHERE
    (88) TOK_QUERY -> . TOK_QUERY LIMIT TOK_LIMIT
    (89) TOK_QUERY -> . SELECT TOK_SELECT FROM TOK_FROM
    (110) TOK_QUERY -> . TOK_QUERY GROUP BY TOK_GROUPBY
    (119) TOK_BULK_INTO -> . BULK INTO TOK_TABLE_NAME TOK_INSERT_COLUMNS VALUES TOK_BULK_ROWS
    (120) TOK_UPDATE -> . UPDATE TOK_TABLE_NAME SET TOK_SET_COLUMNS_CLAUSE WHERE TOK_WHERE
    (122) TOK_UPSERT_INTO -> . UPSERT INTO TOK_TABLE_NAME TOK_INSERT_COLUMNS VALUES TOK_VALUE_ROW
    (123) TOK_DELETE -> . DELETE FROM TOK_TABLE_NAME WHERE TOK_WHERE

    EXPLAIN         shift and go to state 17
    CREATE          shift and go to state 16
    INSERT          shift and go to state 15
    SELECT          shift and go to state 12
    BULK            shift and go to state 13
    UPDATE          shift and go to state 8
    UPSERT          shift and go to state 3
    DELETE          shift and go to state 6

    TOK_DELETE                     shift and go to state 7
    EXECUTE_STATEMENT              shift and go to state 9
    TOK_UPDATE                     shift and go to state 2
    TOK_INSERT_INTO                shift and go to state 14
    TOK_UPSERT_INTO                shift and go to state 10
    TOK_CREATE_TABLE               shift and go to state 1
    TOK_BULK_INTO                  shift and go to state 5
    TOK_QUERY                      shift and go to state 4
    STATEMENT                      shift and go to state 11

state 1

    (3) STATEMENT -> TOK_CREATE_TABLE .
    (64) TOK_CREATE_TABLE -> TOK_CREATE_TABLE . WITH OPTION TOK_TABLE_OPTIONS
    (65) TOK_CREATE_TABLE -> TOK_CREATE_TABLE . WITH META TOK_TABLE_METAS

    END_QUERY       reduce using rule 3 (STATEMENT -> TOK_CREATE_TABLE .)
    WITH            shift and go to state 18


state 2

    (7) STATEMENT -> TOK_UPDATE .

    END_QUERY       reduce using rule 7 (STATEMENT -> TOK_UPDATE .)


state 3

    (122) TOK_UPSERT_INTO -> UPSERT . INTO TOK_TABLE_NAME TOK_INSERT_COLUMNS VALUES TOK_VALUE_ROW

    INTO            shift and go to state 19


state 4

    (5) STATEMENT -> TOK_QUERY .
    (86) TOK_QUERY -> TOK_QUERY . ORDER BY TOK_ORDERBY
    (87) TOK_QUERY -> TOK_QUERY . WHERE TOK_WHERE
    (88) TOK_QUERY -> TOK_QUERY . LIMIT TOK_LIMIT
    (110) TOK_QUERY -> TOK_QUERY . GROUP BY TOK_GROUPBY

    END_QUERY       reduce using rule 5 (STATEMENT -> TOK_QUERY .)
    ORDER           shift and go to state 22
    WHERE           shift and go to state 21
    LIMIT           shift and go to state 23
    GROUP           shift and go to state 20


state 5

    (6) STATEMENT -> TOK_BULK_INTO .

    END_QUERY       reduce using rule 6 (STATEMENT -> TOK_BULK_INTO .)


state 6

    (123) TOK_DELETE -> DELETE . FROM TOK_TABLE_NAME WHERE TOK_WHERE

    FROM            shift and go to state 24


state 7

    (9) STATEMENT -> TOK_DELETE .

    END_QUERY       reduce using rule 9 (STATEMENT -> TOK_DELETE .)


state 8

    (120) TOK_UPDATE -> UPDATE . TOK_TABLE_NAME SET TOK_SET_COLUMNS_CLAUSE WHERE TOK_WHERE
    (75) TOK_TABLE_NAME -> . VALUE_EXPR
    (35) VALUE_EXPR -> . TOK_DOT
    (36) VALUE_EXPR -> . TOK_VALUE
    (37) VALUE_EXPR -> . TOK_DICT_OBJECT
    (38) VALUE_EXPR -> . TOK_LIST_OBJECT
    (39) TOK_DOT -> . TOK_VALUE . TOK_VALUE
    (40) TOK_DOT -> . TOK_VALUE . TOK_DOT
    (41) TOK_VALUE -> . WORD
    (42) TOK_VALUE -> . QUOTE_STRING
    (43) TOK_VALUE -> . NUMBER
    (44) TOK_VALUE -> . DQUOTE_STRING
    (45) TOK_VALUE -> . *
    (11) TOK_DICT_OBJECT -> . { KV_ELEMENTS_EXPR }
    (12) TOK_LIST_OBJECT -> . [ VALUES_EXPR ]
    (13) TOK_LIST_OBJECT -> . [ ]

    WORD            shift and go to state 37
    QUOTE_STRING    shift and go to state 27
    NUMBER          shift and go to state 31
    DQUOTE_STRING   shift and go to state 29
    *               shift and go to state 34
    {               shift and go to state 30
    [               shift and go to state 36

    VALUE_EXPR                     shift and go to state 32
    TOK_TABLE_NAME                 shift and go to state 33
    TOK_DOT                        shift and go to state 25
    TOK_DICT_OBJECT                shift and go to state 35
    TOK_LIST_OBJECT                shift and go to state 26
    TOK_VALUE                      shift and go to state 28

state 9

    (0) S' -> EXECUTE_STATEMENT .



state 10

    (8) STATEMENT -> TOK_UPSERT_INTO .

    END_QUERY       reduce using rule 8 (STATEMENT -> TOK_UPSERT_INTO .)


state 11

    (1) EXECUTE_STATEMENT -> STATEMENT . END_QUERY

    END_QUERY       shift and go to state 38


state 12

    (89) TOK_QUERY -> SELECT . TOK_SELECT FROM TOK_FROM
    (92) TOK_SELECT -> . TOK_SELEXPRS
    (95) TOK_SELEXPRS -> . TOK_SELEXPR
    (96) TOK_SELEXPRS -> . TOK_SELEXPR COMMA TOK_SELEXPR
    (97) TOK_SELEXPRS -> . TOK_SELEXPR COMMA TOK_SELEXPRS
    (93) TOK_SELEXPR -> . LEFT_VALUE_EXPR
    (94) TOK_SELEXPR -> . LEFT_VALUE_EXPR AS VALUE_EXPR
    (25) LEFT_VALUE_EXPR -> . VALUE_EXPR
    (26) LEFT_VALUE_EXPR -> . TOK_FUNCTION_EXPR
    (27) LEFT_VALUE_EXPR -> . LEFT_RESERVED_VALUES_EXPR
    (35) VALUE_EXPR -> . TOK_DOT
    (36) VALUE_EXPR -> . TOK_VALUE
    (37) VALUE_EXPR -> . TOK_DICT_OBJECT
    (38) VALUE_EXPR -> . TOK_LIST_OBJECT
    (57) TOK_FUNCTION_EXPR -> . TOK_BEWTEEN
    (58) TOK_FUNCTION_EXPR -> . TOK_FUNCTION
    (59) TOK_FUNCTION_EXPR -> . TOK_ISNULL
    (23) LEFT_RESERVED_VALUES_EXPR -> . FROM
    (24) LEFT_RESERVED_VALUES_EXPR -> . TO
    (39) TOK_DOT -> . TOK_VALUE . TOK_VALUE
    (40) TOK_DOT -> . TOK_VALUE . TOK_DOT
    (41) TOK_VALUE -> . WORD
    (42) TOK_VALUE -> . QUOTE_STRING
    (43) TOK_VALUE -> . NUMBER
    (44) TOK_VALUE -> . DQUOTE_STRING
    (45) TOK_VALUE -> . *
    (11) TOK_DICT_OBJECT -> . { KV_ELEMENTS_EXPR }
    (12) TOK_LIST_OBJECT -> . [ VALUES_EXPR ]
    (13) TOK_LIST_OBJECT -> . [ ]
    (61) TOK_BEWTEEN -> . VALUE_EXPR BETWEEN RIGHT_VALUE_EXPR AND RIGHT_VALUE_EXPR
    (60) TOK_FUNCTION -> . VALUE_EXPR TOK_TUPLE_OBJECT
    (62) TOK_ISNULL -> . VALUE_EXPR IS NULL
    (63) TOK_ISNULL -> . VALUE_EXPR IS NOT NULL

    FROM            shift and go to state 41
    TO              shift and go to state 46
    WORD            shift and go to state 37
    QUOTE_STRING    shift and go to state 27
    NUMBER          shift and go to state 31
    DQUOTE_STRING   shift and go to state 29
    *               shift and go to state 34
    {               shift and go to state 30
    [               shift and go to state 36

    TOK_SELEXPRS                   shift and go to state 44
    LEFT_VALUE_EXPR                shift and go to state 45
    TOK_DOT                        shift and go to state 25
    TOK_ISNULL                     shift and go to state 42
    TOK_LIST_OBJECT                shift and go to state 26
    TOK_DICT_OBJECT                shift and go to state 35
    TOK_VALUE                      shift and go to state 28
    TOK_BEWTEEN                    shift and go to state 43
    LEFT_RESERVED_VALUES_EXPR      shift and go to state 47
    VALUE_EXPR                     shift and go to state 40
    TOK_SELEXPR                    shift and go to state 48
    TOK_SELECT                     shift and go to state 49
    TOK_FUNCTION                   shift and go to state 50
    TOK_FUNCTION_EXPR              shift and go to state 39

state 13

    (119) TOK_BULK_INTO -> BULK . INTO TOK_TABLE_NAME TOK_INSERT_COLUMNS VALUES TOK_BULK_ROWS

    INTO            shift and go to state 51


state 14

    (4) STATEMENT -> TOK_INSERT_INTO .

    END_QUERY       reduce using rule 4 (STATEMENT -> TOK_INSERT_INTO .)


state 15

    (112) TOK_INSERT_INTO -> INSERT . INTO TOK_TABLE_NAME TOK_INSERT_COLUMNS VALUES TOK_VALUE_ROW

    INTO            shift and go to state 52


state 16

    (66) TOK_CREATE_TABLE -> CREATE . TABLE TOK_TABLE_NAME TOK_TABLE_COLS

    TABLE           shift and go to state 53


state 17

    (2) STATEMENT -> EXPLAIN . STATEMENT
    (2) STATEMENT -> . EXPLAIN STATEMENT
    (3) STATEMENT -> . TOK_CREATE_TABLE
    (4) STATEMENT -> . TOK_INSERT_INTO
    (5) STATEMENT -> . TOK_QUERY
    (6) STATEMENT -> . TOK_BULK_INTO
    (7) STATEMENT -> . TOK_UPDATE
    (8) STATEMENT -> . TOK_UPSERT_INTO
    (9) STATEMENT -> . TOK_DELETE
    (64) TOK_CREATE_TABLE -> . TOK_CREATE_TABLE WITH OPTION TOK_TABLE_OPTIONS
    (65) TOK_CREATE_TABLE -> . TOK_CREATE_TABLE WITH META TOK_TABLE_METAS
    (66) TOK_CREATE_TABLE -> . CREATE TABLE TOK_TABLE_NAME TOK_TABLE_COLS
    (112) TOK_INSERT_INTO -> . INSERT INTO TOK_TABLE_NAME TOK_INSERT_COLUMNS VALUES TOK_VALUE_ROW
    (86) TOK_QUERY -> . TOK_QUERY ORDER BY TOK_ORDERBY
    (87) TOK_QUERY -> . TOK_QUERY WHERE TOK_WHERE
    (88) TOK_QUERY -> . TOK_QUERY LIMIT TOK_LIMIT
    (89) TOK_QUERY -> . SELECT TOK_SELECT FROM TOK_FROM
    (110) TOK_QUERY -> . TOK_QUERY GROUP BY TOK_GROUPBY
    (119) TOK_BULK_INTO -> . BULK INTO TOK_TABLE_NAME TOK_INSERT_COLUMNS VALUES TOK_BULK_ROWS
    (120) TOK_UPDATE -> . UPDATE TOK_TABLE_NAME SET TOK_SET_COLUMNS_CLAUSE WHERE TOK_WHERE
    (122) TOK_UPSERT_INTO -> . UPSERT INTO TOK_TABLE_NAME TOK_INSERT_COLUMNS VALUES TOK_VALUE_ROW
    (123) TOK_DELETE -> . DELETE FROM TOK_TABLE_NAME WHERE TOK_WHERE

    EXPLAIN         shift and go to state 17
    CREATE          shift and go to state 16
    INSERT          shift and go to state 15
    SELECT          shift and go to state 12
    BULK            shift and go to state 13
    UPDATE          shift and go to state 8
    UPSERT          shift and go to state 3
    DELETE          shift and go to state 6

    TOK_DELETE                     shift and go to state 7
    TOK_BULK_INTO                  shift and go to state 5
    STATEMENT                      shift and go to state 54
    TOK_INSERT_INTO                shift and go to state 14
    TOK_UPSERT_INTO                shift and go to state 10
    TOK_CREATE_TABLE               shift and go to state 1
    TOK_UPDATE                     shift and go to state 2
    TOK_QUERY                      shift and go to state 4

state 18

    (64) TOK_CREATE_TABLE -> TOK_CREATE_TABLE WITH . OPTION TOK_TABLE_OPTIONS
    (65) TOK_CREATE_TABLE -> TOK_CREATE_TABLE WITH . META TOK_TABLE_METAS

    OPTION          shift and go to state 55
    META            shift and go to state 56


state 19

    (122) TOK_UPSERT_INTO -> UPSERT INTO . TOK_TABLE_NAME TOK_INSERT_COLUMNS VALUES TOK_VALUE_ROW
    (75) TOK_TABLE_NAME -> . VALUE_EXPR
    (35) VALUE_EXPR -> . TOK_DOT
    (36) VALUE_EXPR -> . TOK_VALUE
    (37) VALUE_EXPR -> . TOK_DICT_OBJECT
    (38) VALUE_EXPR -> . TOK_LIST_OBJECT
    (39) TOK_DOT -> . TOK_VALUE . TOK_VALUE
    (40) TOK_DOT -> . TOK_VALUE . TOK_DOT
    (41) TOK_VALUE -> . WORD
    (42) TOK_VALUE -> . QUOTE_STRING
    (43) TOK_VALUE -> . NUMBER
    (44) TOK_VALUE -> . DQUOTE_STRING
    (45) TOK_VALUE -> . *
    (11) TOK_DICT_OBJECT -> . { KV_ELEMENTS_EXPR }
    (12) TOK_LIST_OBJECT -> . [ VALUES_EXPR ]
    (13) TOK_LIST_OBJECT -> . [ ]

    WORD            shift and go to state 37
    QUOTE_STRING    shift and go to state 27
    NUMBER          shift and go to state 31
    DQUOTE_STRING   shift and go to state 29
    *               shift and go to state 34
    {               shift and go to state 30
    [               shift and go to state 36

    VALUE_EXPR                     shift and go to state 32
    TOK_TABLE_NAME                 shift and go to state 57
    TOK_DOT                        shift and go to state 25
    TOK_LIST_OBJECT                shift and go to state 26
    TOK_VALUE                      shift and go to state 28
    TOK_DICT_OBJECT                shift and go to state 35

state 20

    (110) TOK_QUERY -> TOK_QUERY GROUP . BY TOK_GROUPBY

    BY              shift and go to state 58


state 21
